# wikivoyage2kml

./: Pipfile  README.md  pyproject.toml  wikivoyage2kml.py
templates/: Marker.kml  Placemark.kml  Wikivoyage2KML.kml
