[tool.poetry]
name = "wikivoyage2kml"
version = "0.1.0"
description = "Create KML files from wikivoyage articles"
authors = ["JorgeMira <jorge.mira.yague@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wikitextparser = "^0.55.13"
geopy = "^2.4.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.1"
types-requests = "^2.32.0.20240712"

[tool.ruff]
fix = true
line-length = 100
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["wikitextparser.*", "geopy.*"]
ignore_missing_imports = true
